src/components/_formElements/CommunityTopDropdown/style.module.css
.container {
    position: relative;
}

.primary{
    display: flex;
justify-content: space-between;
align-items: center;
flex: 1 0 0;
border-radius: 8px;
background: #8064A2 !important;
}

.primary>header{
    background: transparent;
}

.primary>header>p{
    color: #FFF !important;
font-family: Poppins;
font-size: 12px;
font-style: normal;
font-weight: 500;
line-height: normal;
}

.secondary{
    display: flex;
justify-content: space-between;
align-items: center;
flex: 1 0 0;
border-radius: 8px;
border: 1px solid var(--Primary-Half, rgba(128, 100, 162, 0.50)) !important;
background: var(--Purple-3, #F7F5F9) !important;
}

.options-container {
    position: absolute;
    top: calc(100% + 4px);
    left: 0;
    width: 100%;
    max-height: 0;
    overflow: hidden;
    transition: 0.3s;
    z-index: 500;
    background-color: white;
    border-radius: 4px;
    box-shadow: 0px 8px 12px 0px rgba(147, 156, 163, 0.12), 0px 0px 2px 0px rgba(147, 156, 163, 0.36);
    margin-bottom: 1rem;
}

.container p {
    color: #6d747a;
    font-size: 14px;
    font-weight: 500;
    max-width: 90px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.secondary>header>p{
    color: var(--Primary-Full, #8064A2) !important;
    font-family: Poppins;
    font-size: 12px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
}

.container p.dropdown-value {
    color: #6d747a;
    padding-top: 8px;
    padding-bottom: 8px;
    cursor: pointer;
}

.options-container.active {
    max-height: 600px;
    display: inline-flex;
    flex-direction: column;
    align-items: flex-start;
    border-radius: 4px;
    left: -19px;
    width: 202px;
    background: #fff;

    /* Drop */
    box-shadow: 0px 8px 12px 0px rgba(147, 156, 163, 0.12), 0px 0px 2px 0px rgba(147, 156, 163, 0.36);
}

.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 7px var(--spacing-8);
    flex-direction: row;
    height: 45px;
    min-width: 129px;
    width: 100%;
}

@media screen and (max-width: 1100px) {
    .container p {
        font-size: 12px;
    }

    .header {
        height: 30px;
    }
}

